--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,9 @@ youtube-transcript-api==0.6.0
 pytube==12.1.0
 textblob==0.17.1
 plotly==5.8.0
-transformers==4.25.1
+transformers==4.24.0
 python-dotenv==0.20.0
+pandas==1.5.3
+numpy==1.23.5
+torch==1.13.1  # Required for transformers
+sentencepiece==0.1.97  # Required for some Hugging Face models
